<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.zmartd3vil.mockupquotimefix.Kuota">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="#6568ce">

        <!--
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_profilling"/>
        //-->
        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/arc_progress"
            android:background="#6568ce"
            android:layout_width="200dp"
            android:layout_height="200dp"
            custom:arc_progress="55"
            custom:arc_bottom_text="@string/field_sisa"
            custom:arc_bottom_text_size="30sp"
            custom:arc_text_color="#FFFFFF"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtview_kuota_sisakuota"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_alignTop="@+id/textView3"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtview_kuota_paket"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:paddingTop="10sp"
            android:paddingLeft="10sp" />

        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtview_kuota_sisa"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="63sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtview_kuota_sisakuota"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30sp" />
        //-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtview_kuota_paketkuota"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20sp"
            android:layout_marginRight="20sp"
            android:id="@+id/textView3" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="#ced0d1"
        >

        <TextView
            android:id="@+id/field_jangka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:alpha="0.5"
            android:text="@string/txtview_kuota_pilihpaket1"
            android:background="#ecf0f1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/field_jangka_atur"
            android:layout_alignEnd="@+id/field_jangka_atur"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/linearLayout" />

        <RelativeLayout
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/field_jangka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">

            <Button
                android:id="@+id/tbl_set"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:alpha="0.5"
                android:text="@string/txtview_kuota_set"
                android:background="#ecf0f1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_alignBottom="@+id/img_rewind"
                android:layout_toLeftOf="@+id/img_rewind"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:background="#ecf0f1"
                android:id="@+id/img_rewind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rewind"
                android:alpha="0.5"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/field_jangka_atur"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:textSize="20sp"
            android:alpha="0.5"
            android:text="@string/txtview_kuota_pilihpaket2"
            android:background="#ecf0f1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_below="@+id/field_jangka"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RelativeLayout
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout2"
            android:layout_alignTop="@+id/field_jangka_atur"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/field_jangka_atur"
            android:layout_toEndOf="@+id/field_jangka_atur">

            <Button
                android:id="@+id/tbl_set_atur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:alpha="0.5"
                android:text="@string/txtview_kuota_set"
                android:background="#ecf0f1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_alignBottom="@+id/img_rewind2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/img_rewind2"
                android:layout_toStartOf="@+id/img_rewind2"
                android:layout_alignParentTop="true" />

            <ImageView
                android:background="#ecf0f1"
                android:id="@+id/img_rewind2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rewind"
                android:alpha="0.5"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_floatingpoint"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:background="#2e8ece"
            app:backgroundTint="#2e8ece" />
    </RelativeLayout>
</LinearLayout>
